Kubernetes/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  ports:
    - name: http
      port: 8096
      targetPort: http
  selector:
    app: jellyfin
